cfn_benchmark/cfn_templates/aws-samples__aws-cloud-wan-blueprints/patterns/4-routing_policies/5-influencing_hybrid_path_between_cnes/cloudformation/workloads.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: AWS Cloud WAN Filtering - Influencing hybrid path between CNEs (VPC & workloads)
Transform: 'AWS::LanguageExtensions'

Parameters:
  CoreNetworkArn:
    Type: String
  CoreNetworkId:
    Type: String
  LatestAmiId:
    Type: "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>"
    Default: "/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64"

Mappings:
  VpcCIDR:
    eu-west-1:
      CIDR: 10.0.0.0/24
      EndpointSubneta: 10.0.0.0/28
      EndpointSubnetb: 10.0.0.16/28
      PrivateSubneta: 10.0.0.32/28
      PrivateSubnetb: 10.0.0.48/28
      CWANSubneta: 10.0.0.64/28
      CWANSubnetb: 10.0.0.80/28
    us-east-1:
      CIDR: 10.10.0.0/24
      EndpointSubneta: 10.10.0.0/28
      EndpointSubnetb: 10.10.0.16/28
      PrivateSubneta: 10.10.0.32/28
      PrivateSubnetb: 10.10.0.48/28
      CWANSubneta: 10.10.0.64/28
      CWANSubnetb: 10.10.0.80/28
    eu-west-2:
      CIDR: 10.20.0.0/24
      EndpointSubneta: 10.20.0.0/28
      EndpointSubnetb: 10.20.0.16/28
      PrivateSubneta: 10.20.0.32/28
      PrivateSubnetb: 10.20.0.48/28
      CWANSubneta: 10.20.0.64/28
      CWANSubnetb: 10.20.0.80/28

Resources:
  # ---------- VPC ----------
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !FindInMap [VpcCIDR, !Ref 'AWS::Region', CIDR]
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - vpc
              - !Ref AWS::StackName
              - !Ref AWS::Region

  # For::Each iteration: per subnet type (Endpoint, Private, CWAN) and AZ (2 AZs)
  # Resources to create: 6 subnets, 6 route tables, 6 route table associations - obtaining AZ affinity
  'Fn::ForEach::SubnetTypes':
    - SubnetType
    - [Endpoint, Private, CWAN]
    - '${SubnetType}':
      'Fn::ForEach::AZ':
        - AvailabilityZone
        - [a, b]
          # Subnets
        - '${SubnetType}Subnet${AvailabilityZone}':
            Type: AWS::EC2::Subnet
            Properties:
              VpcId: !Ref VPC
              AvailabilityZone: !Sub ${AWS::Region}${AvailabilityZone}
              CidrBlock: !FindInMap [VpcCIDR, !Ref 'AWS::Region', 'Fn::Sub': '${SubnetType}Subnet${AvailabilityZone}']
              Tags:
                - Key: Name
                  Value: !Join
                    - '-'
                    - - !Sub subnet-${SubnetType}-AZ${AvailabilityZone}
                      - !Ref AWS::StackName
          # Route Tables
          '${SubnetType}RouteTable${AvailabilityZone}':
            Type: AWS::EC2::RouteTable
            Properties:
              VpcId: !Ref VPC
              Tags:
                - Key: Name
                  Value: !Join
                    - '-'
                    - - !Sub rt-${SubnetType}-AZ${AvailabilityZone}
                      - !Ref AWS::StackName
          # Route Table associations
          '${SubnetType}RouteTableAssociation${AvailabilityZone}':
            Type: AWS::EC2::SubnetRouteTableAssociation
            Properties:
              RouteTableId: !Ref
                'Fn::Sub': '${SubnetType}RouteTable${AvailabilityZone}'
              SubnetId: !Ref
                'Fn::Sub': '${SubnetType}Subnet${AvailabilityZone}'

  # For::Each iteration: per Availability Zone
  # VPC routes to 0.0.0.0/0 (via CWAN)
  'Fn::ForEach::VPCRoutes':
    - AvailabilityZone
    - [a, b]
    - 'DefaultToCWANRoute${AvailabilityZone}':
        DependsOn:
          - CWANAttachment
        Type: AWS::EC2::Route
        Properties:
          RouteTableId: !Ref
            'Fn::Sub': 'PrivateRouteTable${AvailabilityZone}'
          DestinationCidrBlock: '0.0.0.0/0'
          CoreNetworkArn: !Ref CoreNetworkArn

  # AWS Cloud WAN attachment
  CWANAttachment:
    Type: AWS::NetworkManager::VpcAttachment
    Properties:
      CoreNetworkId: !Ref CoreNetworkId
      SubnetArns:
        - Fn::Join:
            - ""
            - - "arn:aws:ec2:"
              - Ref: AWS::Region
              - ":"
              - Ref: AWS::AccountId
              - ":subnet/"
              - Ref: CWANSubneta
        - Fn::Join:
            - ""
            - - "arn:aws:ec2:"
              - Ref: AWS::Region
              - ":"
              - Ref: AWS::AccountId
              - ":subnet/"
              - Ref: CWANSubnetb
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - attachment
              - !Ref AWS::StackName
              - !Ref AWS::Region
      VpcArn:
        Fn::Join:
          - ""
          - - "arn:"
            - Ref: AWS::Partition
            - ":ec2:"
            - Ref: AWS::Region
            - ":"
            - Ref: AWS::AccountId
            - ":vpc/"
            - Ref: VPC

  # Security Groups (Instances and EC2 Instance Connect endpoint)
  VPCInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: VPC - Instance Security Group
      VpcId: !Ref VPC

  VPCInstanceSecurityGroupIngressICMP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref VPCInstanceSecurityGroup
      Description: Allowing ICMP traffic
      IpProtocol: icmp
      FromPort: -1
      ToPort: -1
      CidrIp: 10.0.0.0/8

  VPCInstanceSecurityGroupIngressEIC:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref VPCInstanceSecurityGroup
      Description: Allowing EIC connection
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      SourceSecurityGroupId: !Ref VPCEndpointSecurityGroup

  VPCInstanceSecurityGroupEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref VPCInstanceSecurityGroup
      Description: Allowing egress traffic
      IpProtocol: -1
      CidrIp: 0.0.0.0/0

  VPCEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: VPC - Endpoints Security Group
      VpcId: !Ref VPC

  VPCEndpointSecurityGroupEgressEIC:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref VPCEndpointSecurityGroup
      Description: Allowing EIC connection
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      DestinationSecurityGroupId: !Ref VPCInstanceSecurityGroup

  # # For::Each iteration: per AZ (2 AZs)
  # # EC2 Instances
  'Fn::ForEach::Instances':
    - AvailabilityZone
    - [a, b]
    - 'Instance${AvailabilityZone}':
        Type: AWS::EC2::Instance
        Properties:
          InstanceType: t2.micro
          SecurityGroupIds:
            - !Ref VPCInstanceSecurityGroup
          SubnetId: !Ref
            'Fn::Sub': 'PrivateSubnet${AvailabilityZone}'
          ImageId: !Ref LatestAmiId
          Tags:
            - Key: Name
              Value: !Join
                - '-'
                - - !Sub instance-${AvailabilityZone}
                  - !Ref AWS::StackName

  # EC2 Instance Connect Endpoint
  EICEndpoint:
    Type: AWS::EC2::InstanceConnectEndpoint
    Properties:
      PreserveClientIp: false
      SecurityGroupIds:
        - !Ref VPCEndpointSecurityGroup
      SubnetId: !Ref EndpointSubneta
      Tags:
        - Key: Name
          Value : !Join
            - '-'
            - - !Sub eic
              - !Ref AWS::StackName
